--- a/tutorial_quanvolution.ipynb
+++ b/tutorial_quanvolution.ipynb
@@ -194,7 +194,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "id": "0VNP5olphWV5"
       },
@@ -205,7 +205,7 @@
         "n_train = 50    # Size of the train dataset\n",
         "n_test = 30     # Size of the test dataset\n",
         "\n",
-        "SAVE_PATH = \"quanvolution/\" # Data saving folder\n",
+        "SAVE_PATH = \"/content/quanvolution/\" # Data saving folder\n",
         "PREPROCESS = True           # If False, skip quantum processing and load data from SAVE_PATH\n",
         "np.random.seed(0)           # Seed for NumPy random number generator\n",
         "tf.random.set_seed(0)       # Seed for TensorFlow random number generator"
@@ -223,6 +223,32 @@
         "We import the MNIST dataset from *Keras*. To speedup the evaluation of\n",
         "this demo we use only a small number of training and test images.\n",
         "Obviously, better results are achievable when using the full dataset.\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_images[0].shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NkuwientEZbV",
+        "outputId": "7b2a4e79-b80d-4477-8e81-f766d5a47a7d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(28, 28, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
       ]
     },
     {
@@ -290,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "qHEgPnc1hWV-"
       },
@@ -339,7 +365,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "hcz0uWuGhWWB"
       },
@@ -389,11 +415,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
-        "id": "yn8YDjMrhWWE"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "yn8YDjMrhWWE",
+        "outputId": "6953030d-d6bf-4ed5-c4a5-d238b81194fc"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Quantum pre-processing of train images:\n",
+            "\n",
+            "Quantum pre-processing of test images:\n"
+          ]
+        }
+      ],
       "source": [
         "if PREPROCESS == True:\n",
         "    q_train_images = []\n",
@@ -429,6 +469,19 @@
         "Let us visualize the effect of the quantum convolution layer on a batch\n",
         "of samples:\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from PIL import Image\n",
+        "im = Image.fromarray(A)\n",
+        "im.save(\"your_file.jpeg\")"
+      ],
+      "metadata": {
+        "id": "MyuV5kyXHFTc"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
